--- a/modules/config_map/k8s/0.3/facets.yaml
+++ b/modules/config_map/k8s/0.3/facets.yaml
@@ -2,10 +2,10 @@ intent: config_map
 flavor: k8s
 version: '0.3'
 clouds:
-- aws
-- azure
-- gcp
-- kubernetes
+  - aws
+  - azure
+  - gcp
+  - kubernetes
 spec:
   type: object
   properties:
@@ -14,19 +14,19 @@ spec:
       type: object
       description: Data objects containing key, value pair
       patternProperties:
-        "^[a-zA-Z0-9_.-]*$":
-          title: Data Object Block
-          description: something
-          type: object
-          properties:
-            key:
-              title: ConfigMap Data Key Name
-              description: Key name of the configmap object
-              type: string
-            value:
-              title: ConfigMap Data Object Value
-              description: Value of the configmap object
-              type: textarea
+        keyPattern: "^[a-zA-Z0-9_.-]*$"
+        title: Data Object Block
+        description: something
+        type: object
+        properties:
+          key:
+            title: ConfigMap Data Key Name
+            description: Key name of the configmap object
+            type: string
+          value:
+            title: ConfigMap Data Object Value
+            description: Value of the configmap object
+            type: textarea
 sample:
   $schema: >-
     https://facets-cloud.github.io/facets-schemas/schemas/config_map/config_map.schema.json
