--- a/modules/kubernetes_cluster/gcp_gke/0.1/facets.yaml
+++ b/modules/kubernetes_cluster/gcp_gke/0.1/facets.yaml
@@ -1,10 +1,10 @@
 intent: kubernetes_cluster
 flavor: gcp_gke
-alias-flavors: [ "default" ]
+alias-flavors: ["default"]
 version: "0.1"
 description: Adds kubernetes cluster - gke flavor
 clouds:
-  - gcp
+- gcp
 inputs:
   network_details:
     type: "@outputs/gcp_vpc"
@@ -123,8 +123,8 @@ spec:
               description: Select lifecycle plan for worker nodes
               type: string
               enum:
-                - ON_DEMAND
-                - SPOT
+              - ON_DEMAND
+              - SPOT
               default: SPOT
               x-ui-overrides-only: true
               x-ui-visible-if:
@@ -143,7 +143,8 @@ spec:
                 values: [true]
             enable_multi_az:
               title: Enable Multi Availability Zones
-              description: Set this to true to enable default nodepool in multi availability zones
+              description: Set this to true to enable default nodepool in multi availability
+                zones
               type: boolean
               default: false
               x-ui-overrides-only: true
@@ -166,25 +167,30 @@ spec:
               properties:
                 roles:
                   title: IAM Roles
-                  description: Iam roles to be assigned to facets default nodepool service account
+                  description: Iam roles to be assigned to facets default nodepool
+                    service account
                   type: object
                   patternProperties:
-                    title: Key Name For Role
-                    description: Key name for role
-                    type: object
-                    keyPattern: "^[a-zA-Z][a-zA-Z0-9_.-]*$"
-                    properties:
-                      role:
-                        title: Role
-                        description: Role to be added to the acets default nodepool service account
-                        type: string
-                        x-ui-placeholder: e.g. roles/container.defaultNodeServiceAccount
-                    x-ui-error-message: Key name should start with an alphabet and should contain alpha numeric characters with allowed special characters like underscore, period and hypen
+                    "^[a-zA-Z][a-zA-Z0-9_.-]*$":
+                      title: Key Name For Role
+                      description: Key name for role
+                      type: object
+                      properties:
+                        role:
+                          title: Role
+                          description: Role to be added to the acets default nodepool
+                            service account
+                          type: string
+                          x-ui-placeholder: e.g. roles/container.defaultNodeServiceAccount
+                      x-ui-error-message: Key name should start with an alphabet and
+                        should contain alpha numeric characters with allowed special
+                        characters like underscore, period and hypen
               x-ui-visible-if:
                 field: spec.nodepools.default.enable
-                values: [true]  
-          required: [ "instance_types" ]  
-          x-ui-order: ["enable", "instance_types", "node_lifecycle_type", "root_disk_volume", "max_nodes", "enable_multi_az", "enable_secure_boot", "iam"]
+                values: [true]
+          required: ["instance_types"]
+          x-ui-order: ["enable", "instance_types", "node_lifecycle_type", "root_disk_volume",
+            "max_nodes", "enable_multi_az", "enable_secure_boot", "iam"]
         facets_dedicated:
           title: Facets Dedicated Nodepool Spec
           description: Specifications for facets dedicated nodepool
@@ -223,8 +229,8 @@ spec:
               description: Select lifecycle plan for worker nodes
               type: string
               enum:
-                - ON_DEMAND
-                - SPOT
+              - ON_DEMAND
+              - SPOT
               default: SPOT
               x-ui-overrides-only: true
               x-ui-visible-if:
@@ -257,25 +263,30 @@ spec:
               properties:
                 roles:
                   title: IAM Roles
-                  description: Iam roles to be assigned to facets dedicated nodepool service account
+                  description: Iam roles to be assigned to facets dedicated nodepool
+                    service account
                   type: object
                   patternProperties:
-                    title: Key Name For Role
-                    description: Key name for role
-                    type: object
-                    keyPattern: "^[a-zA-Z][a-zA-Z0-9_.-]*$"
-                    properties:
-                      role:
-                        title: Role
-                        description: Role to be added to the facets dedicated nodepool service account
-                        type: string
-                        x-ui-placeholder: e.g. roles/container.defaultNodeServiceAccount
-                    x-ui-error-message: Key name should start with an alphabet and should contain alpha numeric characters with allowed special characters like underscore, period and hypen
+                    "^[a-zA-Z][a-zA-Z0-9_.-]*$":
+                      title: Key Name For Role
+                      description: Key name for role
+                      type: object
+                      properties:
+                        role:
+                          title: Role
+                          description: Role to be added to the facets dedicated nodepool
+                            service account
+                          type: string
+                          x-ui-placeholder: e.g. roles/container.defaultNodeServiceAccount
+                      x-ui-error-message: Key name should start with an alphabet and
+                        should contain alpha numeric characters with allowed special
+                        characters like underscore, period and hypen
               x-ui-visible-if:
                 field: spec.nodepools.facets_dedicated.enable
                 values: [true]
-          required: [ "instance_types" ]
-          x-ui-order: ["enable", "instance_types", "node_lifecycle_type", "root_disk_volume", "max_nodes", "enable_secure_boot", "iam"]
+          required: ["instance_types"]
+          x-ui-order: ["enable", "instance_types", "node_lifecycle_type", "root_disk_volume",
+            "max_nodes", "enable_secure_boot", "iam"]
   x-ui-order: ["nodepools", "cluster", "maintenance_windows", "auto_upgrade"]
 sample:
   kind: kubernetes_cluster
